# local-ai-sys

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  rag.internal.toml  rag.toml  requirements.txt
.github/: dependabot.yml
.github/agents/: doc-reviewer.agent.md
.github/instructions/: doc-maintenance.instructions.md
.github/scripts/: install-trivy.sh
.github/workflows/: ci.yml  codeql.yml  codeql.yml.deactivate  docker.yml  release-gate.yml  release.yml  security-scheduled.yml
.github/zap/: zap-baseline.conf
docs/: IMPROVEMENTS_AND_RISKS.md  POSTMORTEM_SYNC_FREEZE.md  POSTMORTEM_SYNC_FREEZE.md.solved  PROJECT_OVERVIEW.md  QDRANT_SERVER_MODE.md  TERMINAL_OLLAMA_INTEGRATION.md
obsidian_rag/: __init__.py  config.py  tuning.py
obsidian_rag/api/: __init__.py  app.py  chat_cli.py  cli.py  schemas.py
obsidian_rag/chunking/: __init__.py  code.py  markdown.py  treesitter.py
obsidian_rag/cli/: __init__.py  _backup.py  _chat.py  _query.py  doctor_cmd.py  graph_cmd.py  init_cmd.py  main.py  migrate_cmd.py  schedule_cmd.py  up_cmd.py
obsidian_rag/embeddings/: __init__.py  ollama.py
obsidian_rag/graph/: __init__.py  builder.py  cache.py  enrich.py  obsidian_export.py  query.py
obsidian_rag/pipeline/: __init__.py  __main__.py  backup.py  dask_engine.py  governor.py  ingest.py  manifest.py  sync.py  vault_sync.py
obsidian_rag/pipeline/graph/: builder.py  enrich.py  obsidian_export.py  query.py
obsidian_rag/prompts/: __init__.py  templates.py
obsidian_rag/retrieval/: __init__.py  budget.py  graph_context.py  intent.py  observe.py  rag.py  reranker.py  router.py  sparse.py  system_context.py
obsidian_rag/store/: __init__.py  base.py  chroma.py  chroma_store.py  qdrant_store.py
scripts/: monitor_rag.sh  obsidian-rag.service  rag-cgroup.sh
source/AI-context/local-ai/: 00-index.md  01-ollama-setup.md  02-models-inventory.md  03-modelfiles.md  04-benchmarks.md  05-vram-management.md  06-terminal-usage.md  07-recommendations.md  08-troubleshooting.md  09-model-changes-log.md  10-rag-system.md  README.md
source/AI-context/shell-linux/: 00-shell-index.md  01-shell-overview.md  02-aliases.md  03-functions.md  04-navigation-and-files.md  05-modern-terminal-tools.md  06-git-and-dotfiles.md  07-gpu-nvidia.md  08-rclone-cloud.md  09-clipboard.md  10-maintenance.md  11-cheatsheet.md  12-troubleshooting.md  13-ai-local.md  14-data-engineering.md  README.md  shell-improvement-audit.md
source/AI-context/system-audit/: system-audit.md
source/AI-context/system-profile/: 00-pc-overview.md  01-hardware.md  02-linux-system.md  03-storage.md  04-gpu-nvidia.md  05-dev-environment.md  06-performance-notes.md  README.md
tests/: conftest.py  test_adaptive_topk.py  test_api.py  test_budget.py  test_chunking_code.py  test_chunking_markdown.py  test_chunking_treesitter.py  test_cli_dispatch.py  test_concurrency.py  test_dask_engine.py  test_governor.py  test_graphify_incremental.py  test_ingest_pipeline.py  test_init.py  test_integration.py  test_low_priority.py  test_manifest.py  test_medium_features.py  test_multi_vault.py  test_performance.py  test_reranker.py  test_router.py  test_security.py  test_sparse.py  test_vault_sync.py  test_vector_store.py
