[project]
name = "obsidian-rag"
version = "0.4.0"
description = "Local RAG pipeline — Obsidian Vault + Git repos + Graphify knowledge graph"
requires-python = ">=3.11"

dependencies = [
    "chromadb>=0.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "networkx>=3.0",   # leitura de graph.json do Graphify
    "slowapi>=0.1.9",  # rate limiting
    "graphifyy",       # knowledge graph (pure Python, opt-in na execução)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "coverage>=7.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
rag = "obsidian_rag.cli.main:main"

[tool.setuptools.packages.find]
include = ["obsidian_rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "\\.venv/"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["obsidian_rag"]
omit = [
    "tests/*",
    "obsidian_rag/graph/*",
    "obsidian_rag/api/cli.py",
    "obsidian_rag/api/chat_cli.py",
    "obsidian_rag/pipeline/sync.py",
    "obsidian_rag/pipeline/__main__.py",
    "obsidian_rag/cli/*",
]
